ボタンを修正

--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -1,14 +1,15 @@
-.btn_hover3 {
-  background-color: #000000;
-  transition: all 0.3s ease;
-  padding: 0px 16px;
+@use "../../variables" as *;
+
+.button {
+  background-color: $black;
+  transition: all 0.2s ease;
+  padding: 0px $fontsize-m;
   width: 200px;
   height: 55px;
   color: #fff;
   align-items: center;
   cursor: pointer;
-}
-
-.btn_hover3:hover {
-  background-color: #442606;
+  &:hover {
+    background-color: $orange_bistre;
+  }
 }
