--- a/src/components/molecules/news-and-events-title/news-and-events-title.html
+++ b/src/components/molecules/news-and-events-title/news-and-events-title.html
@@ -1,3 +1,3 @@
 <div class="news-and-events-title">
-  <h2>News<span class="caption">お知らせ</span></h2>
+  <h2>News<span class="caption">縺顔衍繧峨○</span></h2>
 </div>
