ボタンを修正中

--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -6,7 +6,7 @@
   padding: 0px $fontsize-m;
   width: 200px;
   height: 55px;
-  color: #fff;
+  color: $white;
   align-items: center;
   cursor: pointer;
   &:hover {
