--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -1,13 +1,11 @@
-<img
-  src="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\img\card-1.jpg"
-  alt=""
-/>
-<a href=""></a>
-<img
-  src="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\img\card-2.jpg"
-  alt=""
-/>
-<img
-  src="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\img\card-3.jpg"
-  alt=""
-/>
+<div>
+  <img
+    src="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\img\card-1.jpg"
+    alt=""
+  />
+</div>
+<div class="triangle">
+  <p class="card-title">card-title</p>
+</div>
+
+<a class="button">コンセプト</a>
