--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -2,28 +2,25 @@
 
 .button {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   background-color: $black;
-  padding: 0px $fontsize-m;
+  padding: 0px 16px;
 
-  transition: all 0.2s ease;
+  transition: all 0.2s 0s ease;
 
   position: absolute;
   color: $white;
   align-items: center;
-  border: none;
   cursor: pointer;
   font-size: $fontsize-s;
 
   &:hover {
     background-color: $orange_bistre;
-    color: inherit;
     color: $white;
     text-decoration: none;
   }
 
-  @media screen and (min-width: $breakpoint-lg) {
+  @media screen and (max-width: $breakpoint-xl) {
     width: 200px;
     height: 55px;
   }
