カードを作成中

--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -4,8 +4,9 @@
     alt=""
   />
 </div>
+
 <div class="triangle">
   <p class="card-title">card-title</p>
 </div>
 
-<a class="button">コンセプト</a>
+<div class="card-text">card-text</div>
