メッセージを修正

--- a/src/components/molecules/message/message.html
+++ b/src/components/molecules/message/message.html
@@ -1,4 +1,4 @@
 <div class="message">
-  <p class="text-title">タイトルテキスト</p>
-  <p class="explanation-text">説明テキスト</p>
+  <nobr class="text-title">タイトルテキスト</nobr>
+  <h1 class="explanation-text">説明テキスト</h1>
 </div>
