--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -3,25 +3,19 @@
 .message {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding: 52px 20px;
+  @media screen and (min-width: breakpoint-md) {
+    padding: 52px 20px;
+  }
+  @media screen and (min-width: breakpoint-md) {
+    padding: 32px 20px;
+  }
 
   .text-title {
     font-family: $fontfamily-mincho;
     align-items: center;
     text-align: center;
     color: $black;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-
-    @media screen and(max-width:$breakpoint-md) {
-      width: 160px;
-      height: 30px;
-      font-size: $fontsize-l;
-      line-height: 30px;
-    }
 
     @media screen and (min-width: $breakpoint-md) {
       width: 287px;
@@ -29,14 +23,18 @@
       font-size: $fontsize-xl;
       line-height: 54px;
     }
+
+    @media screen and(max-width:$breakpoint-md) {
+      width: 160px;
+      height: 30px;
+      font-size: $fontsize-l;
+      line-height: 30px;
+    }
   }
   .explanation-text {
     font-family: $fontfamily-gothic;
     font-style: normal;
-    font-weight: 400;
     font-size: $fontsize-s;
-
-    text-align: center;
 
     color: $black;
 
