カードを作成中

--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -3,10 +3,10 @@
     src="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\img\card-1.jpg"
     alt=""
   />
-</div>
-
-<div class="triangle">
-  <p class="card-title">card-title</p>
+  <div class="triangle">
+    <p class="card-title">card-title</p>
+  </div>
 </div>
 
 <div class="card-text">card-text</div>
+<a class="button">テキスト</a>
