メッセージを修正

--- a/src/components/molecules/message/message.html
+++ b/src/components/molecules/message/message.html
@@ -1,4 +1,4 @@
 <div class="message">
-  <nobr class="text-title">タイトルテキスト</nobr>
-  <h1 class="explanation-text">説明テキスト</h1>
+  <h1 class="text-title">タイトルテキスト</h1>
+  <p class="explanation-text">説明テキスト</p>
 </div>
