--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -4,10 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  @media screen and (min-width: breakpoint-md) {
+  @media screen and (min-width: breakpoint-lg) {
     padding: 52px 20px;
   }
-  @media screen and (min-width: breakpoint-md) {
+  @media screen and (max-width: breakpoint-lg) {
     padding: 32px 20px;
   }
 
@@ -17,33 +17,27 @@
     text-align: center;
     color: $black;
 
-    @media screen and (min-width: $breakpoint-md) {
-      width: 287px;
-      height: 54px;
+    @media screen and (min-width: $breakpoint-lg) {
       font-size: $fontsize-xl;
       line-height: 54px;
     }
 
-    @media screen and(max-width:$breakpoint-md) {
-      width: 160px;
-      height: 30px;
+    @media screen and(max-width:$breakpoint-lg) {
       font-size: $fontsize-l;
       line-height: 30px;
     }
   }
   .explanation-text {
-    font-family: $fontfamily-gothic;
     font-style: normal;
     font-size: $fontsize-s;
-
     color: $black;
 
-    @media screen and (min-width: $breakpoint-md) {
+    @media screen and (min-width: $breakpoint-lg) {
       height: 36px;
       line-height: 36px;
     }
 
-    @media screen and(max-width:$breakpoint-md) {
+    @media screen and(max-width:$breakpoint-lg) {
       height: 28px;
       line-height: 28px;
     }
