カードを作成中

--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -1,12 +1,14 @@
-<div>
+<div class="card-field">
   <img
     src="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\img\card-1.jpg"
     alt=""
+    class="card-image"
   />
-  <div class="triangle">
-    <p class="card-title">card-title</p>
-  </div>
+  <div class="triangle"></div>
+  <div class="card-title">card-title</div>
 </div>
 
-<div class="card-text">card-text</div>
-<a class="button">テキスト</a>
+<div class="text-field">
+  <div class="card-text">card-text</div>
+  <a class="button">テキスト</a>
+</div>
