ボタンを修正

--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -10,6 +10,8 @@
   align-items: center;
   cursor: pointer;
   font-size: $fontsize-s;
+  width: 200px;
+  height: 55px;
 
   &:hover {
     background-color: $orange_bistre;
@@ -17,18 +19,13 @@
     text-decoration: none;
   }
 
-  @media screen and(min-width:$breakpoint-sm) {
+  @media screen and(max-width:$breakpoint-lg) {
     width: 150px;
     height: 55px;
   }
 
-  @media screen and(min-width:$breakpoint-md) {
+  @media screen and(max-width:$breakpoint-md) {
     width: 180px;
     height: 45px;
-  }
-
-  @media screen and(min-width:$breakpoint-lg) {
-    width: 200px;
-    height: 55px;
   }
 }
