--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -4,9 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  @media screen and (min-width: breakpoint-lg) {
-    padding: 52px 20px;
-  }
+  padding: 52px 20px;
   @media screen and (max-width: breakpoint-lg) {
     padding: 32px 20px;
   }
@@ -16,26 +14,22 @@
     align-items: center;
     text-align: center;
     color: $black;
-
-    @media screen and (min-width: $breakpoint-lg) {
-      font-size: $fontsize-xl;
-      line-height: 54px;
-    }
+    font-size: $fontsize-xl;
+    line-height: 54px;
+    margin-bottom: 10px;
 
     @media screen and(max-width:$breakpoint-lg) {
       font-size: $fontsize-l;
       line-height: 30px;
+      margin-bottom: 6px;
     }
   }
   .explanation-text {
     font-style: normal;
     font-size: $fontsize-s;
     color: $black;
-
-    @media screen and (min-width: $breakpoint-lg) {
-      height: 36px;
-      line-height: 36px;
-    }
+    height: 36px;
+    line-height: 36px;
 
     @media screen and(max-width:$breakpoint-lg) {
       height: 28px;
