カードを作成中

--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -1,14 +1,25 @@
-<div class="card-field">
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+  integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+  crossorigin="anonymous"
+/>
+<link
+  rel="stylesheet"
+  href="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\components\molecules\card\card.scss"
+/>
+
+<div class="card card-self">
   <img
     src="C:\Users\T122095\Desktop\PlayGround\FrontEnd\Practice\LastPractice\Kotaro-frontend-basic-last-assignment\src\img\card-1.jpg"
+    class="card-img-top card-img-top-self"
     alt=""
-    class="card-image"
   />
-  <div class="triangle"></div>
-  <div class="card-title">card-title</div>
-</div>
-
-<div class="text-field">
-  <div class="card-text">card-text</div>
-  <a class="button">テキスト</a>
+  <div class="triangle">
+    <span class="card-title-self">card-title</span>
+  </div>
+  <div class="card-body card-body-self">
+    <p class="card-text card-text-self">card-text</p>
+    <a class="button">テキスト</a>
+  </div>
 </div>
