カードを作成中

--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -20,6 +20,6 @@
   </div>
   <div class="card-body card-body-self">
     <p class="card-text card-text-self">card-text</p>
-    <a class="button">ãƒ†ã‚­ã‚¹ãƒˆ</a>
+    <a class="button">ƒeƒLƒXƒg</a>
   </div>
 </div>
