カードを作成中

--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -15,11 +15,10 @@
     class="card-img-top card-img-top-self"
     alt=""
   />
-  <div class="triangle">
-    <span class="card-title-self">card-title</span>
-  </div>
+  <div class="triangle"></div>
+  <span class="card-title-self">card-title</span>
   <div class="card-body card-body-self">
     <p class="card-text card-text-self">card-text</p>
-    <a class="button">ƒeƒLƒXƒg</a>
+    <a class="button">ãƒ†ã‚­ã‚¹ãƒˆ</a>
   </div>
 </div>
