--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -1,9 +1,7 @@
 @use "../../variables" as *;
 
 .message {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
   padding: 52px 20px;
   @media screen and (max-width: breakpoint-lg) {
     padding: 32px 20px;
@@ -32,7 +30,6 @@
     margin: 0%;
 
     @media screen and(max-width:$breakpoint-lg) {
-      height: 28px;
       line-height: 28px;
     }
   }
