--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -2,6 +2,8 @@
   <div class="triangle"></div>
   <div class="triangle-text">card-title</div>
   <img src="../../../img/card-1.jpg" class="card-img-change" alt="card1" />
-  <div class="card-body card-body-change">card-text</div>
-  <a class="button button-change">テキスト</a>
+  <div class="card-body-field">
+    <div class="card-body card-body-change">card-text</div>
+    <a class="button button-change">テキスト</a>
+  </div>
 </div>
