--- a/src/components/molecules/card/card.scss
+++ b/src/components/molecules/card/card.scss
@@ -27,6 +27,7 @@
 
 .card-img-change {
   transition: all 0.5s ease;
+  cursor: pointer;
   &:hover {
     @media screen and(min-width:$breakpoint-md) {
       transform: scale(1.2, 1.2);
