--- a/src/components/molecules/plan/plan.html
+++ b/src/components/molecules/plan/plan.html
@@ -1,23 +1,23 @@
-<div class="plan1">
-  <div>プランテキスト</div>
-  <div>
+<ul>
+  <li>プランテキスト</li>
+  <li>
     <p>&yen;5000</p>
     <p>月額</p>
-  </div>
-  <div>入会金0円</div>
-  <div>平日:9時～17時</div>
-  <div>土日祝:利用無し</div>
-  <div>コアタイムでの利用に最適なプラン</div>
-</div>
+  </li>
+  <li>入会金0円</li>
+  <li>平日:9時～17時</li>
+  <li>土日祝:利用無し</li>
+  <li>コアタイムでの利用に最適なプラン</li>
+</ul>
 
-<div class="plan2">
-  <div>プランテキスト</div>
-  <div>
+<ul>
+  <li>プランテキスト</li>
+  <li>
     <p>&yen;5000</p>
     <p>月額</p>
-  </div>
-  <div>入会金0円</div>
-  <div>平日:9時～17時</div>
-  <div>土日祝:利用無し</div>
-  <div>コアタイムでの利用に最適なプラン</div>
-</div>
+  </li>
+  <li>入会金0円</li>
+  <li>平日:9時～17時</li>
+  <li>土日祝:利用無し</li>
+  <li>コアタイムでの利用に最適なプラン</li>
+</ul>
