cardを修正 残りは高さの調整

--- a/src/components/molecules/plan/plan.html
+++ b/src/components/molecules/plan/plan.html
@@ -1,7 +1,10 @@
 <ul>
   <li>プランテキスト</li>
   <li>
-    <p>&yen;5000</p>
+    <div>
+      <p>&yen;</p>
+      <p>5,000</p>
+    </div>
     <p>月額</p>
   </li>
   <li>入会金0円</li>
@@ -13,7 +16,10 @@
 <ul>
   <li>プランテキスト</li>
   <li>
-    <p>&yen;5000</p>
+    <div>
+      <p>&yen;</p>
+      <p>5,000</p>
+    </div>
     <p>月額</p>
   </li>
   <li>入会金0円</li>
