--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -3,6 +3,7 @@
 ul {
   list-style-type: none;
   padding: 0px;
+  margin-bottom: 0px;
   li:nth-child(1) {
     margin: 0px;
     padding-top: 20px;
@@ -19,19 +20,42 @@ ul {
     flex-direction: column;
     align-items: center;
     border: 1px solid $gray_gainsboro;
+    div {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: flex-end;
+      padding: 0px 0px 16px;
+      gap: 4px;
+      width: 124px;
+      height: 74px;
+      color: $orange_bistre;
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+      p:nth-child(1) {
+        font-size: 20px;
+        line-height: 29px;
+        margin: 29px 4px 16px 0px;
+      }
+      p:nth-child(2) {
+        font-size: 40px;
+        line-height: 58px;
+        margin: 0px 0px 12px 0px;
+      }
+    }
+    & + p {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: $black;
+      margin-bottom: 0px;
+    }
+    p {
+      margin: 0px;
+    }
   }
-  p:nth-child(1) {
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 58px;
-    text-align: center;
-  }
-  p:nth-child(2) {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: $orange_bistre;
-  }
+
   li:nth-child(n + 3) {
     padding: 20px 10px;
     background-color: $white;
@@ -41,6 +65,9 @@ ul {
     font-size: 14px;
     line-height: 20px;
     text-align: center;
+  }
+  @media screen and(max-width:$breakpoint-md) {
+    margin-bottom: 16px;
   }
 }
 ul:nth-child(odd) {
