--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -18,6 +18,9 @@
     }
     div:nth-child(2) {
       line-height: 23px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
     div:hover:nth-child(2) {
       color: $orange_bistre;
