newsを修正中 リストをそろえる

--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -1,29 +1,33 @@
 @use "../../variables" as *;
 
 .news-contents {
-  li {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    height: 85px;
-    background-color: $white;
-    border: 1px solid $gray_gainsboro;
-    cursor: pointer;
-    div:nth-child(1) {
-      padding: 0px 0px 10px;
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 12px;
-      color: $gray_nobel;
-    }
-    div:nth-child(2) {
-      line-height: 23px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-    div:hover:nth-child(2) {
-      color: $orange_bistre;
+  ul {
+    padding-left: 0px;
+    margin-bottom: 0px;
+    li {
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+      height: 85px;
+      background-color: $white;
+      border: 1px solid $gray_gainsboro;
+      cursor: pointer;
+      div:nth-child(1) {
+        padding: 0px 0px 10px;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 12px;
+        color: $gray_nobel;
+      }
+      div:nth-child(2) {
+        line-height: 23px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+      div:hover:nth-child(2) {
+        color: $orange_bistre;
+      }
     }
   }
 }
