--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -10,7 +10,9 @@
       padding: 20px;
       height: 85px;
       background-color: $white;
-      border: 1px solid $gray_gainsboro;
+      border-top: 1px solid $gray_gainsboro;
+      border-left: 1px solid $gray_gainsboro;
+      border-right: 1px solid $gray_gainsboro;
       cursor: pointer;
       div:nth-child(1) {
         padding: 0px 0px 10px;
@@ -29,9 +31,13 @@
         color: $orange_bistre;
       }
     }
+    li:nth-child(5) {
+      border-bottom: 1px solid $gray_gainsboro;
+    }
   }
 }
 .minor-change {
   display: flex;
   justify-content: flex-end;
+  margin-top: 30px;
 }
