--- a/src/components/organisms/news/news.html
+++ b/src/components/organisms/news/news.html
@@ -1,34 +1,40 @@
-<div class="news-and-events-title">
-  <h2>News<span class="caption">お知らせ</span></h2>
-</div>
-<div class="news-contents">
-  <ul>
-    <li>
-      <div>2018.06.20</div>
-      <div>
-        ブックカフェ・コワーキング系サイト向けテーマ「Switch」をリリースしました。
-      </div>
-    </li>
-    <li>
-      <div>2018.06.18</div>
-      <div>3種のレイアウトから選択できるテンプレートを固定ページに実装</div>
-    </li>
-    <li>
-      <div>2018.06.12</div>
-      <div>利用者からのご質問をまとめた「FAQ」ページをアップしました。</div>
-    </li>
-    <li>
-      <div>2018.06.08</div>
-      <div>
-        デモ用のサンプルデータを表示する「インポート機能」でサイト構築を快適に？
-      </div>
-    </li>
-    <li>
-      <div>2018.06.02</div>
-      <div>テーマのアップデート情報について</div>
-    </li>
-  </ul>
-</div>
-<a href="#" class="news-and-events-more minor-change"
-  >お知らせ一覧<i class="fas fa-chevron-right"></i
-></a>
+<section>
+  <div class="news-and-events-title">
+    <h2>News<span class="caption">お知らせ</span></h2>
+  </div>
+  <div class="news-contents">
+    <ul>
+      <li>
+        <time datetime="2018.06.20">2018.06.20</time>
+        <article>
+          ブックカフェ・コワーキング系サイト向けテーマ「Switch」をリリースしました。
+        </article>
+      </li>
+      <li>
+        <time datetime="2018.06.18">2018.06.18</time>
+        <article>
+          3種のレイアウトから選択できるテンプレートを固定ページに実装
+        </article>
+      </li>
+      <li>
+        <time datetime="2018.06.12">2018.06.12</time>
+        <article>
+          利用者からのご質問をまとめた「FAQ」ページをアップしました。
+        </article>
+      </li>
+      <li>
+        <time datetime="2018.06.08">2018.06.08</time>
+        <article>
+          デモ用のサンプルデータを表示する「インポート機能」でサイト構築を快適に？
+        </article>
+      </li>
+      <li>
+        <time datetime="2018.06.02">2018.06.02</time>
+        <article>テーマのアップデート情報について</article>
+      </li>
+    </ul>
+  </div>
+  <a href="#" class="news-and-events-more minor-change"
+    >お知らせ一覧<i class="fas fa-chevron-right"></i
+  ></a>
+</section>
