--- a/src/components/organisms/news/news.html
+++ b/src/components/organisms/news/news.html
@@ -34,7 +34,9 @@
       </li>
     </ul>
   </div>
-  <a href="#" class="news-and-events-more minor-change"
-    >お知らせ一覧<i class="fas fa-chevron-right"></i
-  ></a>
+  <div class="notice">
+    <a href="#" class="news-and-events-more minor-change"
+      >お知らせ一覧<i class="fas fa-chevron-right"></i
+    ></a>
+  </div>
 </section>
