--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -36,8 +36,10 @@
     }
   }
 }
-.minor-change {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 30px;
+.notice {
+  text-align: right;
+  .minor-change {
+    margin-top: 30px;
+    width: fit-content;
+  }
 }
