--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -15,7 +15,7 @@
       border-right: 1px solid $gray_gainsboro;
       cursor: pointer;
       time {
-        padding: 0px 0px 10px;
+        margin: 0px 0px 10px;
         font-weight: 400;
         font-size: 12px;
         line-height: 12px;
