newsを修正 last-child

--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -30,7 +30,7 @@
         color: $orange_bistre;
       }
     }
-    li:nth-child(5) {
+    li:last-child {
       border-bottom: 1px solid $gray_gainsboro;
     }
   }
