--- a/src/components/organisms/news/news.html
+++ b/src/components/organisms/news/news.html
@@ -5,31 +5,31 @@
   <div class="news-contents">
     <ul>
       <li>
-        <time datetime="2018.06.20">2018.06.20</time>
+        <time datetime="2018-06-20">2018.06.20</time>
         <article>
           ブックカフェ・コワーキング系サイト向けテーマ「Switch」をリリースしました。
         </article>
       </li>
       <li>
-        <time datetime="2018.06.18">2018.06.18</time>
+        <time datetime="2018-06-18">2018.06.18</time>
         <article>
           3種のレイアウトから選択できるテンプレートを固定ページに実装
         </article>
       </li>
       <li>
-        <time datetime="2018.06.12">2018.06.12</time>
+        <time datetime="2018-06-12">2018.06.12</time>
         <article>
           利用者からのご質問をまとめた「FAQ」ページをアップしました。
         </article>
       </li>
       <li>
-        <time datetime="2018.06.08">2018.06.08</time>
+        <time datetime="2018-06-08">2018.06.08</time>
         <article>
           デモ用のサンプルデータを表示する「インポート機能」でサイト構築を快適に？
         </article>
       </li>
       <li>
-        <time datetime="2018.06.02">2018.06.02</time>
+        <time datetime="2018-06-02">2018.06.02</time>
         <article>テーマのアップデート情報について</article>
       </li>
     </ul>
