newsを修正 sectionにクラスを付与

--- a/src/components/organisms/news/news.html
+++ b/src/components/organisms/news/news.html
@@ -1,4 +1,4 @@
-<section>
+<section class="news">
   <div class="news-and-events-title">
     <h2>News<span class="caption">お知らせ</span></h2>
   </div>
