planを修正 高さの調整完了？ 残りはレスポンシブ対応

--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -87,4 +87,9 @@ ul:nth-child(even) {
   li:nth-child(2) {
     background-color: $gray_desertStorm;
   }
+  li:last-child {
+    height: 80px;
+    justify-content: center;
+    line-height: 40px;
+  }
 }
