--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -1,95 +1,104 @@
 @use "../../variables" as *;
 
-ul {
-  list-style-type: none;
-  padding: 0px;
-  margin-bottom: 0px;
-  li:nth-child(1) {
-    margin: 0px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    text-align: center;
-    color: $white;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 29px;
-  }
-  li:nth-child(2) {
-    padding: 24px 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid $gray_gainsboro;
-    div {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: flex-end;
-      padding: 0px 0px 16px;
-      gap: 4px;
-      width: 124px;
-      height: 74px;
-      color: $orange_bistre;
+.plan {
+  ul {
+    list-style-type: none;
+    padding: 0px;
+    margin-bottom: 0px;
+    li:nth-child(1) {
+      margin: 0px;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      text-align: center;
+      color: $white;
       font-weight: 700;
+      font-size: 20px;
+      line-height: 29px;
+    }
+    li:nth-child(2) {
+      padding: 24px 0px;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      p:nth-child(1) {
-        font-size: 20px;
-        line-height: 29px;
-        margin: 29px 4px 16px 0px;
+      border: 1px solid $gray_gainsboro;
+      div {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 0px 0px 16px;
+        gap: 4px;
+        width: 124px;
+        height: 74px;
+        color: $orange_bistre;
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        p:nth-child(1) {
+          font-size: 20px;
+          line-height: 29px;
+          margin: 29px 4px 16px 0px;
+        }
+        p:nth-child(2) {
+          font-size: 40px;
+          line-height: 58px;
+          margin: 0px 0px 12px 0px;
+        }
       }
-      p:nth-child(2) {
-        font-size: 40px;
-        line-height: 58px;
-        margin: 0px 0px 12px 0px;
+      & + p {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        color: $black;
+        margin-bottom: 0px;
+      }
+      p {
+        margin: 0px;
       }
     }
-    & + p {
+
+    li:nth-child(n + 3) {
+      padding: 20px 10px;
+      background-color: $white;
+      border: 1px solid $gray_gainsboro;
       font-weight: 400;
       font-size: 14px;
       line-height: 20px;
-      color: $black;
-      margin-bottom: 0px;
+      text-align: center;
     }
-    p {
-      margin: 0px;
+    @media screen and(max-width:$breakpoint-md) {
+      margin-bottom: 16px;
+      width: 220px;
     }
   }
-
-  li:nth-child(n + 3) {
-    padding: 20px 10px;
-    background-color: $white;
-    border: 1px solid $gray_gainsboro;
-    margin: -1px 0px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    text-align: center;
+  ul:nth-child(odd) {
+    li:nth-child(1) {
+      background-color: $orange_zorba;
+    }
+    li:nth-child(2) {
+      background-color: $gray_desertStorm;
+    }
+  }
+  ul:nth-child(even) {
+    border: 5px solid $orange_bistre;
+    li {
+      margin: -1px -1px 0px -1px;
+      &:nth-child(1) {
+        background-color: $orange_bistre;
+        margin-top: -3px;
+      }
+      &:nth-child(2) {
+        background-color: $gray_desertStorm;
+      }
+      &:nth-child(n + 3) {
+        padding-bottom: 21px;
+      }
+      &:last-child {
+        height: 80px;
+      }
+    }
   }
   @media screen and(max-width:$breakpoint-md) {
-    margin-bottom: 16px;
-  }
-}
-ul:nth-child(odd) {
-  li:nth-child(1) {
-    background-color: $orange_zorba;
-  }
-  li:nth-child(2) {
-    background-color: $gray_desertStorm;
-  }
-}
-
-ul:nth-child(even) {
-  border: 5px solid $orange_bistre;
-  li:nth-child(1) {
-    background-color: $orange_bistre;
-  }
-  li:nth-child(2) {
-    background-color: $gray_desertStorm;
-  }
-  li:last-child {
-    height: 80px;
-    justify-content: center;
-    line-height: 40px;
+    display: flex;
   }
 }
