--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,10 +1,11 @@
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Switch</a>
-    <div class="btn-group" role="group" aria-label="Basic example">
+<div class="container-change">
+    <a class="switch" href="#">
+      <img src="../../../img/header.png" alt="">
+    </a>
+    <div class="btn-group btn-group-change" role="group" aria-label="Basic example">
       <button class="btn btn-secondary">HOME</button>
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">CONCEPT</button>
+        <button class="btn btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">CONCEPT</button>
         <div class="dropdown-menu">
           <a href="" class="dropdown-item">ブログアーカイブ</a
           ><a href="" class="dropdown-item">お知らせアーカイブ</a
@@ -18,13 +19,12 @@
           <a href="" class="dropdown-item">ACCESS</a>
         </div>
       </div>
-        <button class="btn btn-secondary ">SERVICE</button>
-        <button class="btn btn-secondary ">FLOOR</button>
-        <button class="btn btn-secondary ">INTERVIEW</button>
-        <button class="btn btn-secondary ">BLOG</button>
-        <button class="btn btn-secondary ">ACCESS</button>
-        <button class="btn btn-secondary ">DOWNLOAD</button>
+      <button class="btn btn-secondary ">SERVICE</button>
+      <button class="btn btn-secondary ">FLOOR</button>
+      <button class="btn btn-secondary ">INTERVIEW</button>
+      <button class="btn btn-secondary ">BLOG</button>
+      <button class="btn btn-secondary ">ACCESS</button>
+      <button class="btn btn-secondary ">DOWNLOAD</button>
       </div>
     </div>
-  </nav>
 </div>
