planを修正 レスポンシブ対応

--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -94,7 +94,7 @@
       }
     }
   }
-  @media screen and(max-width:$breakpoint-md) {
+  @media screen and(min-width:$breakpoint-md) {
     display: flex;
   }
 }
