headerを作成中 lg以下のdefault完成？

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -26,5 +26,10 @@
       <button class="btn btn-secondary ">ACCESS</button>
       <button class="btn btn-secondary ">DOWNLOAD</button>
       </div>
+    <div class="rectangle-group">
+      <div class="rectangle"></div>
+      <div class="rectangle"></div>
+      <div class="rectangle"></div>
+    </div>
     </div>
 </div>
