headerを作成中 lg以下のopenのhtmlまで完成 残りはcss

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,35 +1,71 @@
 <div class="container-change">
-    <a class="switch" href="#">
-      <img src="../../../img/header.png" alt="">
-    </a>
-    <div class="btn-group btn-group-change" role="group" aria-label="Basic example">
-      <button class="btn btn-secondary">HOME</button>
-      <div class="dropdown">
-        <button class="btn btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">CONCEPT</button>
-        <div class="dropdown-menu">
-          <a href="" class="dropdown-item">ブログアーカイブ</a
-          ><a href="" class="dropdown-item">お知らせアーカイブ</a
-          ><a href="" class="dropdown-item">イベントアーカイブ</a>
-          <a href="" class="dropdown-item">インタビューアーカイブ</a
-          ><a href="" class="dropdown-item">FAQページ</a
-          ><a href="" class="dropdown-item">固定ページ(デフォルト)</a>
-          <a href="" class="dropdown-item">CONCEPT</a
-          ><a href="" class="dropdown-item">SERVICE</a
-          ><a href="" class="dropdown-item">FLOOR</a>
-          <a href="" class="dropdown-item">ACCESS</a>
-        </div>
+  <a class="switch" href="#">
+    <img src="../../../img/header.png" alt="" />
+  </a>
+  <div
+    class="btn-group btn-group-change"
+    role="group"
+    aria-label="Basic example"
+  >
+    <button class="btn btn-secondary">HOME</button>
+    <div class="dropdown">
+      <button
+        class="btn btn-secondary"
+        type="button"
+        id="dropdownMenuButton"
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        CONCEPT
+      </button>
+      <div class="dropdown-menu">
+        <a href="" class="dropdown-item">ブログアーカイブ</a
+        ><a href="" class="dropdown-item">お知らせアーカイブ</a
+        ><a href="" class="dropdown-item">イベントアーカイブ</a>
+        <a href="" class="dropdown-item">インタビューアーカイブ</a
+        ><a href="" class="dropdown-item">FAQページ</a
+        ><a href="" class="dropdown-item">固定ページ(デフォルト)</a>
+        <a href="" class="dropdown-item">CONCEPT</a
+        ><a href="" class="dropdown-item">SERVICE</a
+        ><a href="" class="dropdown-item">FLOOR</a>
+        <a href="" class="dropdown-item">ACCESS</a>
       </div>
-      <button class="btn btn-secondary ">SERVICE</button>
-      <button class="btn btn-secondary ">FLOOR</button>
-      <button class="btn btn-secondary ">INTERVIEW</button>
-      <button class="btn btn-secondary ">BLOG</button>
-      <button class="btn btn-secondary ">ACCESS</button>
-      <button class="btn btn-secondary ">DOWNLOAD</button>
-      </div>
-    <div class="rectangle-group">
-      <div class="rectangle"></div>
-      <div class="rectangle"></div>
-      <div class="rectangle"></div>
     </div>
-    </div>
+    <button class="btn btn-secondary">SERVICE</button>
+    <button class="btn btn-secondary">FLOOR</button>
+    <button class="btn btn-secondary">INTERVIEW</button>
+    <button class="btn btn-secondary">BLOG</button>
+    <button class="btn btn-secondary">ACCESS</button>
+    <button class="btn btn-secondary">DOWNLOAD</button>
+  </div>
+  <div class="rectangle-group dropdown">
+    <div class="rectangle"></div>
+    <div class="rectangle"></div>
+    <div class="rectangle"></div>
+    <ul class="rectangle-dropdown-menu">
+      <li><a href="#">HOME</a></li>
+      <li>
+        <a href="#">CONCEPT</a>
+        <ul>
+          <li><a href="#">ブログアーカイブ</a></li>
+          <li><a href="#">お知らせアーカイブ</a></li>
+          <li><a href="#">イベントアーカイブ</a></li>
+          <li><a href="#">インタビューアーアーカイブ</a></li>
+          <li><a href="#">FAQページ</a></li>
+          <li><a href="#">固定ページ(デフォルト)</a></li>
+          <li><a href="#">CONCEPT</a></li>
+          <li><a href="#">SERVICE</a></li>
+          <li><a href="#">FLOOR</a></li>
+          <li><a href="#">ACCESS</a></li>
+        </ul>
+      </li>
+      <li><a href="#">SERVICE</a></li>
+      <li><a href="#">FLOOR</a></li>
+      <li><a href="#">INTERVIEW</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">ACCESS</a></li>
+      <li><a href="#">DOWNLOAD</a></li>
+    </ul>
+  </div>
 </div>
