--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -69,6 +69,9 @@
     @media screen and(max-width:$breakpoint-md) {
       margin-bottom: 16px;
     }
+    @media screen and(min-width:$breakpoint-md) {
+      width: 100%;
+    }
   }
   ul:nth-child(odd) {
     li:nth-child(1) {
